--- a/attraction.html
+++ b/attraction.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <div class="home__title">
-                    <h1>Rozpočet</h1>
+                    <h1>Atrakce</h1>
                 </div>
             </div>
         </div>
@@ -68,9 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="homecard__text">
-                    <p>Cestování s omezeným rozpočtem neznamená, že musíte ustoupit z pohodlí a kvality. V České
-                        republice najdete mnoho cenově dostupných ubytovacích možností, které nabízejí jak dostupnost,
-                        tak nezapomenutelný pobyt. Zde je výběr některých z nejlepších levných hotelů po celé zemi:</p>
+                    <p>Ať už jste hrdý Čech, který prozkoumává svou vlast, nebo zvědavý cestovatel z ciziny, tento srovnávací průvodce vám pomůže odhalit poklady České republiky. Od historických měst po přírodní zázraky máme vaši dovolenou pokrytou. Pojďme společně vyrazit na tuto cestu! </p>
                 </div>
             </div>
         </div>
@@ -251,10 +249,7 @@
         <div class="container">
             <div class="row">
                 <div class="end__content">
-                    <p>Tyto cenově dostupné možnosti v České republice nabízejí komfort, pohodlí a možnost prozkoumat
-                        tuto krásnou zemi, aniž byste překročili váš rozpočet. Ať už prozkoumáváte živé ulice Prahy nebo
-                        klidnou krajinu, v České republice je cenově dostupné ubytování, které vás rádo přivítá na vaší
-                        cestě. </p>
+                    <p>Závěr: Ať už vás láká historie a architektura Prahy, klidná lázeňská města, pivní kultura Budějovic a Plzně nebo přírodní krásy Českého Švýcarska a Šumavy, Česká republika nabízí mnoho atrakcí, které vás okouzlí. Čeští návštěvníci i světoví cestovatelé, nechte tento průvodce být vaším kompasem, jak objevujete bohatou paletu zážitků, které na </p>
                 </div>
             </div>
         </div>
