--- a/attraction.html
+++ b/attraction.html
@@ -52,7 +52,7 @@
     <!-- site header end -->
 
     <!-- site banner start -->
-    <section class="budgetbanner">
+    <section class="attractionbanner">
         <div class="container">
             <div class="row">
                 <div class="home__title">
@@ -64,7 +64,7 @@
     <!-- site banner end -->
 
     <!-- site homecard start -->
-    <section class="homecard budget">
+    <section class="homecard attraction">
         <div class="container">
             <div class="row">
                 <div class="homecard__text">
@@ -75,174 +75,95 @@
     </section>
     <!-- site homecard end -->
 
-    <!-- site hotelcard start -->
-    <section class="hotelcard">
+    <!-- site attractioncard start -->
+    <section class="attractioncard">
         <div class="container">
-            <div class="row">
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            01
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard1.jpg" class="img-fluid" alt="budgetcard1">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Czech Inn, Praha </h3>
-                        <p>Skrytý v hipsterské čtvrti Žižkov, Czech Inn je stylový hostel, který nabízí soukromé pokoje
-                            s moderním vybavením. S živou atmosférou, přátelským personálem a živým barem je oblíbeným
-                            místem pro cestovatele, kteří šetří penězi.</p>
-                        <div class="hotel-btn">
-                            <a href="https://www.czech-inn.com/">Ukázat
-                                více</a>
-                        </div>
-                    </div>
-                </div>
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            02
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard2.jpg" class="img-fluid" alt="budgetcard2">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Hostel One Home, Praha</h3>
-                        <p> Nacházející se v samém srdci Prahy, Hostel One Home poskytuje útulné a společenské prostředí
-                            pro cestovatele. Hostel každodenně pořádá různé aktivity a události, což usnadňuje setkávání
-                            s ostatními dobrodruhy. </p>
-                        <div class="hotel-btn">
-                            <a href="https://onefamhostels.com/">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
             </div>
-            <div class="row">
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            03
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard3.jpg" class="img-fluid" alt="budgetcard3">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Mosaic House, Praha</h3>
-                        <p>Unikátní ekologicky šetrný hotel Mosaic House nabízí cenově výhodné ubytování s moderním
-                            designem. Je blízko centra města a má vlastní bar a kavárnu. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.mosaichouse.com/cs/ ">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            04
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard4.jpg" class="img-fluid" alt="budgetcard4">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Miss Sophie's, Olomouc</h3>
-                        <p> Nacházející se v kouzelném městě Olomouc, Miss Sophie's je boutique hostel nabízející
-                            stylové a cenově dostupné pokoje. Přátelský personál vám rád poskytne tipy na objevování
-                            tohoto historického pokladu. </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.miss-sophies.com/olomouc/ ">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-lg-6  col-sm-12 equal">
+              <div class="homemain__part">
+                <h3> Praha: Město Stovek Věží <br>Český Krumlov: Kouzelná Pohádka</h3>
+                <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
+              </div>
             </div>
-            <div class="row">
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            05
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard5.jpg" class="img-fluid" alt="budgetcard5">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Casa de la Musica, Brno </h3>
-                        <p>Tento funky hostel v Brně nabízí cenově dostupné pokoje a živou atmosféru. Je známý svým
-                            hudebním dekorem a je skvělým výchozím bodem pro prozkoumání kulturních atrakcí města. </p>
-                        <div class="hotel-btn">
-                            <a href="http://mdcb.cz/">Ukázat
-                                více</a>
-                        </div>
-                    </div>
+          </div>
+          <div class="row flex-wrap-reverse">
+            <div class="col-lg-6  col-sm-12 equal">
+                <div class="homemain__part">
+                  <h3>Karlovy Vary: Elegance Lázní <br> Mariánské Lázně: Klidný Wellness</h3>
+                  <p>Karlovy Vary: Užijte si luxusní lázeňský zážitek, kdy budete pít minerální vody z velkolepých kolonád a obdivovat honosnou architekturu tohoto slavného lázeňského města v Čechách. </p>
+                  <p> Mariánské Lázně: Najděte klid v Mariánských Lázních, dalším lázeňském ráji známém pro své léčivé prameny, bujné parky a elegantní kolonády. </p>
                 </div>
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            06
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard6.jpg" class="img-fluid" alt="budgetcard6">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Hostel Boudnik, Brno </h3>
-                        <p> Umístěný v bývalém pivovaru, Hostel Boudnik je unikátní levnou možností ubytování. Nabízí
-                            pohodlné ubytování ve společných pokojích i
-                            soukromých pokojích a pravidelně pořádá kulturní události.
-                        </p>
-                        <div class="hotel-btn">
-                            <a href="https://hostel-boudnik.praguehotelsweb.com/de/ ">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
+              </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
             </div>
-            <div class="row">
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            07
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard7.jpg" class="img-fluid" alt="budgetcard7">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Hostel Dakura, Praha </h3>
-                        <p>Skrytý v klidné rezidenční čtvrti Prahy, Hostel Dakura poskytuje klidné místo k odpočinku po
-                            dni plném prohlídek. S zahradou a terasou je skvělým skrytým pokladem pro cestovatele s
-                            omezeným rozpočtem. </p>
-                        <div class="hotel-btn">
-                            <a href="https://hosteldakura.com/ ">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
-                <div class=".col-lg-6 col-md-6 col-sm-12">
-                    <div class="hotelcard__main">
-                        <div class="hotel__numeric">
-                            08
-                        </div>
-                        <div class="hotelcard__picture">
-                            <img src="images/budgetcard8.jpg" class="img-fluid" alt="budgetcard8">
-                        </div>
-                    </div>
-                    <div class="hotelcard__part">
-                        <h3>Sir Toby's Hostel, Praha </h3>
-                        <p>Nacházející se v moderní čtvrti Holešovice, Sir Toby's Hostel nabízí útulné a přívětivé
-                            prostředí. S hospodou na místě je fantastickým místem ke komunikaci s ostatními cestovateli.
-                        </p>
-                        <div class="hotel-btn">
-                            <a href="https://www.sirtobys.com/ ">Ukázat více</a>
-                        </div>
-                    </div>
-                </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
             </div>
-        </div>
-        </div>
-    </section>
-    <!-- site hotelcard end -->
+            <div class="col-lg-6  col-sm-12 equal">
+              <div class="homemain__part">
+                <h3>České Budějovice: Domov Budvaru <br>Plzeň: Město Piva</h3>
+                <p>České Budějovice: Vychutnejte si originální pivo Budweiser, vařené od roku 1895, a prozkoumejte historické centrum s impozantním Černou věží a malebným náměstím. </p>
+                <p>Plzeň: Objevte místo narození piva Pilsner a navštivte pivovar Pilsner Urquell. Plzeň nabízí také bohatou kulturní scénu a výjimečnou gotickou a renesanční architekturu.</p>
+              </div>
+            </div>
+          </div>
+          <div class="row flex-wrap-reverse">
+            <div class="col-lg-6  col-sm-12 equal">
+                <div class="homemain__part">
+                  <h3>Kutná Hora: Stříbrná Historie<br>Telč: Renesanční Krása</h3>
+                  <p> Kutná Hora: Vstupte do středověké minulosti s působivým Sedleckým kostelem (Kostnice) a obdivujte gotickou krásu Kostela svaté Barbory. </p>
+                  <p>Telč: Procházejte se historickým centrem Telče zapsaným na seznamu UNESCO, proslulým svou barevnou renesanční architekturou a malebnými rybníky. </p>
+                </div>
+              </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
+            </div>
+            <div class="col-lg-6  col-sm-12 equal">
+              <div class="homemain__part">
+                <h3>České Švýcarsko: Přírodní Zázraky <br>Národní park Šumava: Nedotčená Divočina </h3>
+                <p>České Švýcarsko: Hikejte mezi surreálními pískovcovými skalami Českého Švýcarska, prozkoumejte Pravčickou bránu a projížďejte na lodi po řece Labe.</p>
+                <p>Národní park Šumava: Ponořte se do neposkvrněné přírody Šumavy, kde vás čekají hluboké lesy, ledovcová jezera a divoké hory, ideální pro nadšené turisty a milovníky přírody. </p>
+              </div>
+            </div>
+          </div>
+          <div class="row flex-wrap-reverse">
+            <div class="col-lg-6  col-sm-12 equal">
+                <div class="homemain__part">
+                  <h3>Brno: Moravská Elegance <br>Olomouc: Barokní Nádhera</h3>
+                  <p> Brno: Objevte bohatou kulturní scénu, ohromující hrad Špilberk a unikátní funkcionalistickou architekturu tohoto dynamického města na Moravě</p>
+                  <p>Olomouc: Obdivujte barokní krásu Olomouce s jejím slavným Sloupem Nejsvětější Trojice, Arcibiskupským palácem a orlojem v historickém centru města</p>
+                </div>
+              </div>
+            <div class="col-lg-6 col-sm-12">
+              <div class="homemain__picture">
+                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+              </div>
+            </div>
+          </div>
+          </div>
+      </section>
+    <!-- site attractioncard end -->
 
     <!-- site ending start -->
     <section class="endtext">
