--- a/attraction.html
+++ b/attraction.html
@@ -68,7 +68,9 @@
         <div class="container">
             <div class="row">
                 <div class="homecard__text">
-                    <p>Ať už jste hrdý Čech, který prozkoumává svou vlast, nebo zvědavý cestovatel z ciziny, tento srovnávací průvodce vám pomůže odhalit poklady České republiky. Od historických měst po přírodní zázraky máme vaši dovolenou pokrytou. Pojďme společně vyrazit na tuto cestu! </p>
+                    <p>Ať už jste hrdý Čech, který prozkoumává svou vlast, nebo zvědavý cestovatel z ciziny, tento
+                        srovnávací průvodce vám pomůže odhalit poklady České republiky. Od historických měst po přírodní
+                        zázraky máme vaši dovolenou pokrytou. Pojďme společně vyrazit na tuto cestu! </p>
                 </div>
             </div>
         </div>
@@ -78,91 +80,102 @@
     <!-- site attractioncard start -->
     <section class="attractioncard">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
-            </div>
-            <div class="col-lg-6  col-sm-12 equal">
-              <div class="homemain__part">
-                <h3> Praha: Město Stovek Věží <br>Český Krumlov: Kouzelná Pohádka</h3>
-                <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
-              </div>
-            </div>
-          </div>
-          <div class="row flex-wrap-reverse">
-            <div class="col-lg-6  col-sm-12 equal">
-                <div class="homemain__part">
-                  <h3>Karlovy Vary: Elegance Lázní <br> Mariánské Lázně: Klidný Wellness</h3>
-                  <p>Karlovy Vary: Užijte si luxusní lázeňský zážitek, kdy budete pít minerální vody z velkolepých kolonád a obdivovat honosnou architekturu tohoto slavného lázeňského města v Čechách. </p>
-                  <p> Mariánské Lázně: Najděte klid v Mariánských Lázních, dalším lázeňském ráji známém pro své léčivé prameny, bujné parky a elegantní kolonády. </p>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
                 </div>
-              </div>
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
-            </div>
-            <div class="col-lg-6  col-sm-12 equal">
-              <div class="homemain__part">
-                <h3>České Budějovice: Domov Budvaru <br>Plzeň: Město Piva</h3>
-                <p>České Budějovice: Vychutnejte si originální pivo Budweiser, vařené od roku 1895, a prozkoumejte historické centrum s impozantním Černou věží a malebným náměstím. </p>
-                <p>Plzeň: Objevte místo narození piva Pilsner a navštivte pivovar Pilsner Urquell. Plzeň nabízí také bohatou kulturní scénu a výjimečnou gotickou a renesanční architekturu.</p>
-              </div>
-            </div>
-          </div>
-          <div class="row flex-wrap-reverse">
-            <div class="col-lg-6  col-sm-12 equal">
-                <div class="homemain__part">
-                  <h3>Kutná Hora: Stříbrná Historie<br>Telč: Renesanční Krása</h3>
-                  <p> Kutná Hora: Vstupte do středověké minulosti s působivým Sedleckým kostelem (Kostnice) a obdivujte gotickou krásu Kostela svaté Barbory. </p>
-                  <p>Telč: Procházejte se historickým centrem Telče zapsaným na seznamu UNESCO, proslulým svou barevnou renesanční architekturou a malebnými rybníky. </p>
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3> Praha: Město Stovek Věží <br>Český Krumlov: Kouzelná Pohádka</h3>
+                        <p> Český Krumlov: Malebný klenot v Jižních Čechách, Český Krumlov, nabízí pohádkovou atmosféru
+                            s UNESCO památkovým zámkem, klikatou Vltavou a malebným historickým centrem. </p>
+                    </div>
                 </div>
-              </div>
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
-            </div>
-            <div class="col-lg-6  col-sm-12 equal">
-              <div class="homemain__part">
-                <h3>České Švýcarsko: Přírodní Zázraky <br>Národní park Šumava: Nedotčená Divočina </h3>
-                <p>České Švýcarsko: Hikejte mezi surreálními pískovcovými skalami Českého Švýcarska, prozkoumejte Pravčickou bránu a projížďejte na lodi po řece Labe.</p>
-                <p>Národní park Šumava: Ponořte se do neposkvrněné přírody Šumavy, kde vás čekají hluboké lesy, ledovcová jezera a divoké hory, ideální pro nadšené turisty a milovníky přírody. </p>
-              </div>
-            </div>
-          </div>
-          <div class="row flex-wrap-reverse">
-            <div class="col-lg-6  col-sm-12 equal">
-                <div class="homemain__part">
-                  <h3>Brno: Moravská Elegance <br>Olomouc: Barokní Nádhera</h3>
-                  <p> Brno: Objevte bohatou kulturní scénu, ohromující hrad Špilberk a unikátní funkcionalistickou architekturu tohoto dynamického města na Moravě</p>
-                  <p>Olomouc: Obdivujte barokní krásu Olomouce s jejím slavným Sloupem Nejsvětější Trojice, Arcibiskupským palácem a orlojem v historickém centru města</p>
+            <div class="row flex-wrap-reverse">
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>Karlovy Vary: Elegance Lázní <br> Mariánské Lázně: Klidný Wellness</h3>
+                        <p>Karlovy Vary: Užijte si luxusní lázeňský zážitek, kdy budete pít minerální vody z velkolepých
+                            kolonád a obdivovat honosnou architekturu tohoto slavného lázeňského města v Čechách. </p>
+                        <p> Mariánské Lázně: Najděte klid v Mariánských Lázních, dalším lázeňském ráji známém pro své
+                            léčivé prameny, bujné parky a elegantní kolonády. </p>
+                    </div>
                 </div>
-              </div>
-            <div class="col-lg-6 col-sm-12">
-              <div class="homemain__picture">
-                <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
-              </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
+                </div>
             </div>
-          </div>
-          </div>
-      </section>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
+                </div>
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>České Budějovice: Domov Budvaru <br>Plzeň: Město Piva</h3>
+                        <p>České Budějovice: Vychutnejte si originální pivo Budweiser, vařené od roku 1895, a
+                            prozkoumejte historické centrum s impozantním Černou věží a malebným náměstím. </p>
+                        <p>Plzeň: Objevte místo narození piva Pilsner a navštivte pivovar Pilsner Urquell. Plzeň nabízí
+                            také bohatou kulturní scénu a výjimečnou gotickou a renesanční architekturu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row flex-wrap-reverse">
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>Kutná Hora: Stříbrná Historie<br>Telč: Renesanční Krása</h3>
+                        <p> Kutná Hora: Vstupte do středověké minulosti s působivým Sedleckým kostelem (Kostnice) a
+                            obdivujte gotickou krásu Kostela svaté Barbory. </p>
+                        <p>Telč: Procházejte se historickým centrem Telče zapsaným na seznamu UNESCO, proslulým svou
+                            barevnou renesanční architekturou a malebnými rybníky. </p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
+                </div>
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>České Švýcarsko: Přírodní Zázraky <br>Národní park Šumava: Nedotčená Divočina </h3>
+                        <p>České Švýcarsko: Hikejte mezi surreálními pískovcovými skalami Českého Švýcarska,
+                            prozkoumejte Pravčickou bránu a projížďejte na lodi po řece Labe.</p>
+                        <p>Národní park Šumava: Ponořte se do neposkvrněné přírody Šumavy, kde vás čekají hluboké lesy,
+                            ledovcová jezera a divoké hory, ideální pro nadšené turisty a milovníky přírody. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row flex-wrap-reverse">
+                <div class="col-lg-6  col-sm-12 equal">
+                    <div class="homemain__part">
+                        <h3>Brno: Moravská Elegance <br>Olomouc: Barokní Nádhera</h3>
+                        <p> Brno: Objevte bohatou kulturní scénu, ohromující hrad Špilberk a unikátní funkcionalistickou
+                            architekturu tohoto dynamického města na Moravě</p>
+                        <p>Olomouc: Obdivujte barokní krásu Olomouce s jejím slavným Sloupem Nejsvětější Trojice,
+                            Arcibiskupským palácem a orlojem v historickém centru města</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-sm-12">
+                    <div class="homemain__picture">
+                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- site attractioncard end -->
 
     <!-- site ending start -->
@@ -170,7 +183,10 @@
         <div class="container">
             <div class="row">
                 <div class="end__content">
-                    <p>Závěr: Ať už vás láká historie a architektura Prahy, klidná lázeňská města, pivní kultura Budějovic a Plzně nebo přírodní krásy Českého Švýcarska a Šumavy, Česká republika nabízí mnoho atrakcí, které vás okouzlí. Čeští návštěvníci i světoví cestovatelé, nechte tento průvodce být vaším kompasem, jak objevujete bohatou paletu zážitků, které na </p>
+                    <p>Závěr: Ať už vás láká historie a architektura Prahy, klidná lázeňská města, pivní kultura
+                        Budějovic a Plzně nebo přírodní krásy Českého Švýcarska a Šumavy, Česká republika nabízí mnoho
+                        atrakcí, které vás okouzlí. Čeští návštěvníci i světoví cestovatelé, nechte tento průvodce být
+                        vaším kompasem, jak objevujete bohatou paletu zážitků, které na </p>
                 </div>
             </div>
         </div>
