--- a/attraction.html
+++ b/attraction.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard1.jpg" class="img-fluid" alt="attractioncard1">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
@@ -106,14 +106,14 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard2.jpg" class="img-fluid" alt="attractioncard2">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard3.jpg" class="img-fluid" alt="attractioncard3">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
@@ -138,14 +138,14 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard4.jpg" class="img-fluid" alt="attractioncard4">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard5.jpg" class="img-fluid" alt="attractioncard5">
                     </div>
                 </div>
                 <div class="col-lg-6  col-sm-12 equal">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-12">
                     <div class="homemain__picture">
-                        <img src="images/homepart1.jpg" class="img-fluid" alt="homepart1">
+                        <img src="images/attractioncard6.jpg" class="img-fluid" alt="attractioncard6">
                     </div>
                 </div>
             </div>
