--- a/attraction.html
+++ b/attraction.html
@@ -182,7 +182,7 @@
     <section class="endtext">
         <div class="container">
             <div class="row">
-                <div class="end__content">
+                <div class="end__content attraction">
                     <p>Závěr: Ať už vás láká historie a architektura Prahy, klidná lázeňská města, pivní kultura
                         Budějovic a Plzně nebo přírodní krásy Českého Švýcarska a Šumavy, Česká republika nabízí mnoho
                         atrakcí, které vás okouzlí. Čeští návštěvníci i světoví cestovatelé, nechte tento průvodce být
